{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "55b7d7d1-3157-4e48-af1e-ed0e84a58c8d",
            "actions": [
                {
                    "name": "ShipMove",
                    "type": "PassThrough",
                    "id": "4e909484-3f46-4232-8081-cdef01141b86",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipPrimaryShoot",
                    "type": "Button",
                    "id": "62f84ffc-ffca-45f4-ac59-b9a2f909c1d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=1.401298E-45,behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipSecondaryShoot",
                    "type": "Button",
                    "id": "4b9386a9-0588-4fb5-9ff8-15d349d7b6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=1.401298E-45,behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "6dc01575-5a85-45bd-ad34-eadc4f7ba152",
                    "path": "3DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "50a7de6b-4c43-4e4e-aae1-d366191f75e1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "e8a65631-9239-4509-8daf-04f706ba7b42",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "66cd4a78-c0b3-43d0-9b6f-1e6a10217298",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "3b99e417-c276-414f-89a5-788541178b58",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dec53caa-d81e-4480-958e-33c6133b6b0d",
                    "path": "<Accelerometer>/acceleration",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a774fe0-a686-4078-80fa-e2f454a162c3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipPrimaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2fd7a6b-973f-4a45-b778-68bc890eed15",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShipSecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}